# Amethyst

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  compile_commands.json  graph.py  operations.csv  run.sh
data/: 1024_mb_rtx8000  1gb_comp_emptymask  256_mb_rtx8000  64_mb_rtx8000  overview.txt
data/comp/: cmc_0.01  cmc_0.05  cmc_0.1  cmc_0.5  cmc_0.9  csc_0.01  csc_0.05  csc_0.1  csc_0.5  csc_0.9  cuni_0.01  cuni_0.05  cuni_0.1  cuni_0.5  cuni_0.9  mc_0.01  mc_0.05  mc_0.1  mc_0.5  mc_0.9  sc_0.01  sc_0.05  sc_0.1  sc_0.5  sc_0.9  uni_0.01  uni_0.015  uni_0.025  uni_0.035  uni_0.05  uni_0.1  uni_0.5  uni_0.9
data/nvcc/: nv1  nv2
src/: bit_iterator.cuh  common_code.cuh  config.cuh  cuda_time.cuh  fast_prng.cuh  lib.cuh  main.cu  op_chaining_demo.cu  slab_iterator.cuh  utils.cuh
src/benchs/: bench_binary_op_baseline.cu  bench_binary_op_nogaps.cu  bench_binary_op_slabs.cu  bench_compressstore_baseline_cub.cu  bench_compressstore_slabs.cu  bench_filter_baseline.cu  bench_filter_nogaps.cu  bench_filter_slabs.cu  bench_groupby_sm_array.cu  bench_groupby_sort_cub.cu  bench_hop_baseline_cub.cu  bench_hop_nogaps.cu  bench_hop_slabs.cu
src/kernels/: binary_op_baseline.cuh  binary_op_nogaps.cuh  binary_op_slabs.cuh  compressstore_slabs.cuh  filter_baseline.cuh  filter_nogaps.cuh  filter_slabs.cuh  groupby_sm_array.cuh  hop.cuh
visualisation/: overview.txt
